<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PokemonDetailsActivity">

    <ImageView
        android:id="@+id/mainHeadingImageview"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/description_pokemon_logo"
        android:src="@drawable/pokemon_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/loadingDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mainHeadingImageview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/errorMessageTextview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_loading_pokemon"
        android:textAlignment="center"
        android:visibility="invisible"
        app:drawableTopCompat="@drawable/ic_error_orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainHeadingImageview" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pokemonDetailsContainer"
        android:layout_width="match_parent"
        android:visibility="invisible"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/mainHeadingImageview"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/pokemoneNameTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="24sp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/pokemonImageview"
            app:layout_constraintRight_toRightOf="@id/pokemonImageview"
            tools:text="@string/description_pokemon_pikachu"/>

        <ImageView
            android:id="@+id/pokemonImageview"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/pokemoneNameTextview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:contentDescription="@string/pokemon_image_details_description"/>

        <TextView
            android:id="@+id/weightTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/weight"
            android:layout_marginStart="40dp"
            app:layout_constraintTop_toBottomOf="@id/pokemonImageview"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/heightTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/height"
            android:layout_marginEnd="40dp"
            app:layout_constraintTop_toBottomOf="@id/pokemonImageview"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/typesTextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/pokemonTypes"
            android:layout_marginEnd="40dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@id/weightTextview"
            app:layout_constraintLeft_toLeftOf="@id/weightTextview"
            app:layout_constraintRight_toRightOf="@id/heightTextview"/>

        <TextView
            android:id="@+id/movesTextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="15sp"
            android:text="@string/pokemonMoves"
            android:layout_marginEnd="40dp"
            android:textAlignment="viewStart"
            app:layout_constraintTop_toBottomOf="@id/typesTextview"
            app:layout_constraintLeft_toLeftOf="@id/weightTextview"
            app:layout_constraintRight_toRightOf="@id/heightTextview"/>

        <TextView
            android:id="@+id/otherImagesTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/other_images"
            app:layout_constraintBottom_toTopOf="@id/shinyImageHeadingTextview"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/backImageHeadingTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_marginBottom="8dp"
            android:text="@string/back"
            app:layout_constraintBottom_toTopOf="@id/pokemonBackImageview"
            app:layout_constraintLeft_toLeftOf="@id/pokemonBackImageview"
            app:layout_constraintRight_toRightOf="@id/pokemonBackImageview"/>

        <ImageView
            android:id="@+id/pokemonBackImageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/pokemonShinyImageview"
            android:contentDescription="@string/description_pokemon_image"/>

        <TextView
            android:id="@+id/shinyImageHeadingTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:textStyle="bold"
            android:textSize="13sp"
            android:layout_marginBottom="8dp"
            android:text="@string/shiny"
            app:layout_constraintBottom_toTopOf="@id/pokemonShinyImageview"
            app:layout_constraintLeft_toLeftOf="@id/pokemonShinyImageview"
            app:layout_constraintRight_toRightOf="@id/pokemonShinyImageview"/>

        <ImageView
            android:id="@+id/pokemonShinyImageview"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@id/pokemonBackImageview"
            android:contentDescription="@string/description_pokemon_image"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>